# build-q

./: Makefile  PRD.md  README.md  pyproject.toml
build_q/: __init__.py  builder.py  cli.py  config.py
build_q.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: bump_version.py
